Updates for week 9 repo